welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: ')' expected but ';' found.
		do{droite} while(x<=2;croisement();)
                                     ^Poucet:5: error: illegal start of statement
		do{droite} while(x<=2;croisement();)
                                                   ^Poucet:6: error: illegal start of statement
		do{gauche} while(x=>3;croisement();)
                                                   ^